--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -20,10 +21,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.0",
     "typescript": "^5"
   },
   "prisma": {
-    "schema": "prisma/schema.prisma"
+    "schema": "app/prisma/schema.prisma"
   }
 }
