--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@neondatabase/serverless": "^0.10.4",
     "next": "^15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vercel": "^41.1.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
